# SaFiM

./: CMakeLists.txt  GroundCover.asc  LICENSE  README.txt  WFS_fireweather.cpp  WFS_fireweather.h  WFS_landscape.cpp  WFS_landscape.h  WFS_output.cpp  WFS_output.h  WildlandFireSimulator.pro  cell.h  csvreader.cpp  csvreader.h  dead-biomass.asc  example_landscape.cpp  example_landscape.h  fire.cpp  fire.h  firemap.cpp  firemap.h  fireweather.cpp  fireweather.h  fixed_mediumNorthEasternWind.txt  fixed_mediumNorthernWind.txt  globals.h  landscape.cpp  landscape.h  landscape.txt  landscape_interface.h  live-biomass.asc  main.cpp  simulation.cpp  simulation.h  testing.sh  utility.cpp  utility.h  weather.txt
